--- a/DatingApp/Api/appsettings.Development.json
+++ b/DatingApp/Api/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": {"DefaultConnection":"Data sourse=datingapp.db"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
