--- a/DatingApp/client/package.json
+++ b/DatingApp/client/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "awsome": "^1.4.0",
     "bootstrap": "^4.5.3",
+    "font": "^0.0.4",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.2",
     "rxjs": "~6.6.0",
