--- a/DatingApp/client/package.json
+++ b/DatingApp/client/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "awsome": "^1.4.0",
     "bootstrap": "^4.5.3",
+    "bootswatch": "^5.2.0",
     "font": "^0.0.4",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.2",
