--- a/DatingApp/client/package.json
+++ b/DatingApp/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@kolkov/ngx-gallery": "^2.0.1",
     "awsome": "^1.4.0",
     "bootstrap": "^4.5.3",
     "bootswatch": "^5.2.0",
