--- a/.hintrc
+++ b/.hintrc
@@ -14,6 +14,14 @@
       {
         "label": "off"
       }
+    ],
+    "no-inline-styles": "off",
+    "axe/structure": [
+      "default",
+      {
+        "list": "off",
+        "listitem": "off"
+      }
     ]
   }
 }
